--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,41 @@
-// Place all the styles related to the Pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+a {
+	text-decoration: none;
+}
+
+a:visited {
+	text-decoration: none;
+}
+
+a:hover {
+	color: red;
+}
+
+.titleBanner {
+	text-align: center;
+	margin-bottom: 4%;
+}
+
+		.titleBanner .titleName {
+			font-size: 3rem;
+		}
+
+		.titleBanner .titleDescription {
+			font-size: 1.2rem;
+		}
+
+.nav {
+	float: left;
+	width: 10%;
+	margin-right: 8%;
+}
+
+		.nav p {
+			font-size: 1.1rem;
+			
+		}
+
+.pageDiv {
+	float: right;
+	width: 80%;
+	padding-top: 2%;
+}
