--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,23 @@
   </head>
 
   <body>
-  
+
+  	<div class='titleBanner'>
+		<div class='titleName'>lisa devon</div>
+		<div class='titleDescription'>sound design / mix / foley / edit / compose</div>
+	</div>
+
+  	<div class='left nav'>
+		<p><%= link_to "about", about_path %></p>
+		<p><%= link_to "connect", connect_path %></p>
+		<p><%= link_to "post", post_path %></p>
+		<p><%= link_to "music", music_path %></p>
+		<p><%= link_to "resume", resume_path %></p>
+	</div>
+
+	<div class='right partialContent'>
+	</div>
+
     <%= yield %>
   </body>
 </html>
