--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -55,70 +55,76 @@ iframe {
 
 
 
+//index
+		.indexTxt {
+			font-size: 4rem;
+			font-weight: bold;
+			font-family: Arial;
+		}
 
 
-
-.project {
-	width: 45%;
-	height: 100%;
-	margin: .1%;
-	margin-bottom: .3%;
-	display: inline-block;
-	background-color: black;
-	border: 3px white solid;
-}
-
-.postProject {
-	position: relative;
-	margin-top: 20%;
-	font-size: 2.5vw;
-	color: white;
-}
-
-.postProject a, .postProject .projBtn{
-	color: white;
-	text-decoration: none;
-}
-
-.postProject a:hover, .postProject .projBtn:hover {
-	color: black;
-  cursor: pointer;
-}
-
-// modals
-.projModal {
-    display: none;
-    position: fixed; 
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%; 
-    overflow: auto;
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
-    color: black;
-    text-align: center;
-}
-.projModalContent {
-    background-color: #f9dbe0;
-    margin: 15% auto; 
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-.projClose {
-    color: #aaa;
-    float: right;
-    font-size: 25px;
-    font-weight: bold;
-}
-.projClose:hover,
-.projClose:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
+//post & music 
+		.project {
+			width: 45%;
+			height: 100%;
+			margin: .1%;
+			margin-bottom: .3%;
+			display: inline-block;
+			background-color: black;
+			border: 3px white solid;
+		}
+		
+		.postProject, .musicProject {
+			position: relative;
+			margin-top: 20%;
+			font-size: 2.5vw;
+			color: white;
+		}
+		
+		.postProject a, .musicProject, .projBtn{
+			color: white;
+			text-decoration: none;
+		}
+		
+		.postProject a:hover, .musicProject a:hover, .projBtn:hover {
+			color: black;
+		  cursor: pointer;
+		}
+		
+		// modals
+		.projModal {
+		    display: none;
+		    position: fixed; 
+		    z-index: 1;
+		    left: 0;
+		    top: 0;
+		    width: 100%;
+		    height: 100%; 
+		    overflow: auto;
+		    background-color: rgb(0,0,0); /* Fallback color */
+		    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+		    color: black;
+		    text-align: center;
+		}
+		.projModalContent {
+		    background-color: #f9dbe0;
+		    margin: 15% auto; 
+		    padding: 20px;
+		    border: 1px solid #888;
+		    width: 80%;
+		}
+		.projClose {
+		    color: #aaa;
+		    float: right;
+		    font-size: 25px;
+		    font-weight: bold;
+		}
+		.projClose:hover,
+		.projClose:focus {
+		    color: black;
+		    text-decoration: none;
+		    cursor: pointer;
+		}
 
 
 
