Add resume download link

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,4 +1,9 @@
 <div class='pageDiv'>
+
+<%= link_to 'Download PDF', 'resume.pdf', download: 'LisaDevon' %>
+<br>
+
 super qualified for life - hire me<br>
 references by Sierra available upon request
+
 </div>
