Include mail_form gem

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,9 +1,9 @@
 <div class='pageDiv'>
 
-<%= link_to 'Download PDF', 'resume.pdf', download: 'LisaDevon' %>
+<%= link_to 'download resume', 'resume.pdf', download: 'LisaDevon' %>
 <br>
 
 super qualified for life - hire me<br>
-references by Sierra available upon request
+references by sierra available upon request
 
 </div>
