--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   	<div class='left nav'>
 		<p><%= link_to "about", about_path %></p>
 		<p><%= link_to "connect", connect_path %></p>
+			<!-- change to new_contact_path -->
 		<p><%= link_to "post", post_path %></p>
 		<p><%= link_to "music", music_path %></p>
 		<p><%= link_to "resume", resume_path %></p>
