Add film projects; Style projBtns for film

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 		<p><%= link_to "connect", connect_path %></p>
 			<!-- change to new_contact_path -->
 		<p><%= link_to "post", post_path %></p>
+		<p><%= link_to "film", film_path %></p>
 		<p><%= link_to "music", music_path %></p>
 		<p><%= link_to "resume", resume_path %></p>
 	</div>
