--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -63,32 +63,89 @@ iframe {
 		}
 
 
-//post & music 
+//film projects
+
+		.filmAmericanParadise {
+			background-image: url('/projectImgs/americanparadise.jpg');
+			background-size: cover;
+    		background-repeat:   no-repeat;
+    		background-position: center center;
+		}
+
+		.filmSeaGypsies {
+			background-image: url('/projectImgs/seagypsies.jpg');
+			background-size: cover;
+    		background-repeat:   no-repeat;
+    		background-position: center center;
+		}
+
+		.filmFindingKukan {
+			background-image: url('/projectImgs/findingkukan.jpg');
+			background-size: cover;
+    		background-repeat:   no-repeat;
+    		background-position: center center;			
+		}
+
+		.filmVoicesBeyondTheWall {
+			background-image: url('/projectImgs/voicesbeyondthewalls.jpg');
+			background-size: cover;
+    		background-repeat:   no-repeat;
+    		background-position: center center;
+		}
+
+		.filmWinningGirl {
+			background-image: url('/projectImgs/winninggirl.jpg');
+			background-size: cover;
+    		background-repeat:   no-repeat;
+    		background-position: center center;			
+		}
+
+		.filmGutHack {
+			background-image: url('/projectImgs/guthack.jpg');
+			background-size: cover;
+    		background-repeat:   no-repeat;
+    		background-position: center center;
+		}
+
+
+
+//post, film, music 
 		.project {
 			width: 45%;
 			height: 100%;
 			margin: .1%;
 			margin-bottom: .3%;
 			display: inline-block;
-			background-color: black;
+			opacity: 0.65;
 			border: 3px white solid;
 		}
-		
-		.postProject, .musicProject {
+
+		.postProject, .musicProject, .filmProject {
 			position: relative;
 			margin-top: 20%;
 			font-size: 2.5vw;
-			color: white;
+			color: black;
 		}
 		
-		.postProject a, .musicProject, .projBtn{
+		.postProject a, .musicProject a, .filmProject a, .projBtn{
 			color: white;
 			text-decoration: none;
+			opacity: 0.75;
 		}
 		
-		.postProject a:hover, .musicProject a:hover, .projBtn:hover {
-			color: black;
-		  cursor: pointer;
+		.postProject a:hover, .musicProject a:hover, .filmProject a:hover, .projBtn:hover {
+			opacity: 100;
+			text-shadow: 1px 1px black;
+		  	cursor: pointer;
+		}
+
+		.projTitle {
+			font-size: 1.5rem;
+		}
+
+		.projImg {
+			text-align: center;
+			width: 70%;
 		}
 		
 		// modals
@@ -107,7 +164,7 @@ iframe {
 		    text-align: center;
 		}
 		.projModalContent {
-		    background-color: #f9dbe0;
+		    background-color: #d7efea;
 		    margin: 15% auto; 
 		    padding: 20px;
 		    border: 1px solid #888;
@@ -131,11 +188,42 @@ iframe {
 
 
 
-
-
-
-
 // individual project pages
 .projectShow {
 	width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+//browser size media queries
+@media only screen and (max-width: 550px) {
+		.nav {
+			float: none;
+			width: 100%;
+			text-align: center;
+			position: initial;
+			margin: 1%;
+		}
+
+		.nav p {
+			display: inline;
+			word-spacing: 2rem;
+		}
+		
+		.pageDiv {
+			float: none;
+			width: 100%;
+			margin: auto;
+			margin-left: 2.5%;
+		}
 }
