Add email link for connect

--- a/app/views/pages/connect.html.erb
+++ b/app/views/pages/connect.html.erb
@@ -1,3 +1,8 @@
 <div class='pageDiv'>
-lisa.anna.devon@gmail.com
+
+	e-mail me:
+	<%= mail_to "lisa.anna.devon@gmail.com" do %>
+  		lisa.anna.devon@gmail.com
+	<% end %>
+
 </div>
