--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class='pageDiv'>
-LISA IS SUNSHINE ALL THE TIME Taciti hac pulvinar molestie enim potenti rhoncus platea conubia eget odio urna, turpis imperdiet vivamus placerat semper rhoncus sagittis torquent dictum ad nibh scelerisque, sapien leo faucibus egestas vulputate cubilia nibh netus aptent euismod.
-
-
+	lisa devon is a san francisco based sound designer and engineer.<br>
+	she specializes in sound for film, branded spots, & other visual media.<br>
+	she also composes music & has a huge affinity for synthesizers.
 </div>
