Add social media links

--- a/app/views/pages/connect.html.erb
+++ b/app/views/pages/connect.html.erb
@@ -1,8 +1,15 @@
 <div class='pageDiv'>
 
-	e-mail me:
+	<p>e-mail me:
 	<%= mail_to "lisa.anna.devon@gmail.com" do %>
   		lisa.anna.devon@gmail.com
-	<% end %>
+	<% end %></p>
+
+
+	<p><%= link_to 'IMDB', "https://www.imdb.com/name/nm5559080/?ref_=nv_sr_1", :target => "_blank" %></p>
+
+	<p><%= link_to 'linkedin', "https://www.linkedin.com/in/lisa-devon-175b6676/", :target => "_blank" %></p>
+
+	<p><%= link_to 'facebook', "https://www.facebook.com/lisa.devon.7", :target => "_blank" %></p>
 
 </div>
