--- a/app/views/pages/music.html.erb
+++ b/app/views/pages/music.html.erb
@@ -2,24 +2,19 @@
 
 	<!-- visible project blocks -->
 		<div id='portfolio'> 
-			<div class='project'>
+			<div class='project musicMagicianBag'>
 				<div class='musicProject'>
-					<span data-modal='music1Modal' class='projBtn'>music 1</span>
+					<span data-modal='music1Modal' class='projBtn'>magician bag</span>
 				</div>
 			</div>
-			<div class='project'>
+			<div class='project musicSelidim'>
 				<div class='musicProject'>
-					<span data-modal='music2Modal' class='projBtn'>music 2</span>
+					<span data-modal='music2Modal' class='projBtn'>selidim</span>
 				</div>		
 			</div>
-			<div class='project'>
+			<div class='project musicAllegretto'>
 				<div class='musicProject'>
-					<span data-modal='music3Modal' class='projBtn'>music 3</span>
-				</div>
-			</div>
-			<div class='project'>
-				<div class='musicProject'>
-					<span data-modal='music4Modal' class='projBtn'>music 4</span>
+					<span data-modal='music3Modal' class='projBtn'>allegretto</span>
 				</div>
 			</div>
 		</div>	
@@ -44,13 +39,6 @@
 		 	<div class='projModalContent'>
 		 		<span class='projClose'>&times;</span>
 		    	<%= render partial: 'music3', layout: false %>
-		  	</div>
-		</div>
-		
-		<div id='music4Modal' class='projModal'>
-		 	<div class='projModalContent'>
-		 		<span class='projClose'>&times;</span>
-		    	<%= render partial: 'music4', layout: false %>
 		  	</div>
 		</div>
 
