--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,9 +1,7 @@
 <div class='pageDiv'>
 
-<%= link_to 'download resume', 'resume.pdf', download: 'LisaDevon' %>
-<br>
+<%= image_tag '/images/resumeimg.jpg', :class => 'resumeImg' %><br><br>
 
-super qualified for life - hire me<br>
-references by sierra available upon request
+<%= link_to 'download resume', 'resume.pdf', download: 'LisaDevon' %>
 
 </div>
