--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,7 @@
+body {
+	margin: 2%;
+}
+
 a {
 	text-decoration: none;
 }
@@ -48,7 +52,7 @@ iframe {
 
 .pageDiv {
 	float: right;
-	width: 80%;
+	width: 75%;
 	padding-top: 2%;
 	margin-right: 4%;
 }
@@ -60,6 +64,29 @@ iframe {
 			font-size: 4rem;
 			font-weight: bold;
 			font-family: Arial;
+		}
+
+//about
+		.about {
+			margin: auto;
+			margin-top: 3vh;
+		}
+
+		.aboutTxt {
+			font-size: 1rem;
+		}
+
+//connect
+		.connect {
+			margin: auto;
+			margin-top: 3vh;
+		}
+
+		.icon {
+			width: 6%;
+			min-width: 50px;
+			margin: 1%;
+			opacity: 0.9;
 		}
 
 
@@ -103,6 +130,19 @@ iframe {
 			background-image: url('/projectImgs/allegretto.jpg')
 		}
 
+//post projects
+
+		.postVero {
+			background-image: url('/projectImgs/vero.jpg')
+		}
+
+		.postCisco {
+			background-image: url('/projectImgs/cisco.jpg')
+		}
+
+		.postQueensway {
+			background-image: url('/projectImgs/queensway.jpg')
+		}
 
 
 //post, film, music 
@@ -220,8 +260,22 @@ iframe {
 		
 		.pageDiv {
 			float: none;
-			width: 100%;
+			width: 70%;
 			margin: auto;
-			margin-left: 2.5%;
+		}
+
+		.project {
+			display: block;
+			margin: auto;
+			width: 100%;
+			height: 100%;
+		}
+
+		.postProject, .musicProject, .filmProject {
+			font-size: 150%;
+		}
+
+		.connect {
+			text-align: center;
 		}
 }
