--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -235,7 +235,39 @@ iframe {
 .resumeImg {
 	width: 90%;
 	text-align: center;
+}
 
+.resume h2 {
+	font-size: 1.8rem;
+}
+
+.resume h3 {
+	font-size: 1.3rem;
+	margin-left: 2%;
+}
+
+.resume h4 {
+	font-size: 1.05rem;
+	font-style: italic;
+	font-weight: normal;
+	margin-left: 4%;
+	margin-top: -12px;
+}
+
+.resume h5 {
+	font-size: 1.1rem;
+	font-weight: normal;
+	margin-left: 4%;
+	margin-top: -14px;
+}
+
+.resume ul {
+	margin-top: -18px;
+	margin-bottom: -3px;
+}
+
+.resume li {
+	margin-left: 2%;
 }
 
 
