Adjust resume download style

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,5 +1,9 @@
 <div class='pageDiv resume'>
 
+	<div class='resumeDownload'>
+		[ <%= link_to 'download resume', 'resume.pdf', download: 'LisaDevon' %> ]
+	</div>
+
 	<H2>experience</H2> 
 		<H3>audio engineer</H3>
 			<H4>june 2014 - present</H4> 
@@ -65,9 +69,5 @@
 			<H5>bachelor of science (BS), audio production, 2011-2013</H5>
 		<H3>west valley college</H3>
 			<H5>associate's degree, liberal arts, 2008-2012</H5>
-
-<br><br>
-
-<%= link_to 'download resume', 'resume.pdf', download: 'LisaDevon' %>
 
 </div>
