Change visibility of modals to display to fix safari bug

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -190,7 +190,7 @@ iframe {
 		
 		// modals
 		.projModal {
-		    visibility: hidden;
+			display: none;
 		    position: fixed; 
 		    z-index: 1;
 		    left: 0;
