--- a/app/views/pages/_film_FindingKukan.html.erb
+++ b/app/views/pages/_film_FindingKukan.html.erb
@@ -2,4 +2,4 @@
 CAAM film festival<br>
 role: sound design<br><br>
 
-<iframe src="https://player.vimeo.com/video/188201391?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="//player.vimeo.com/video/188201391?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
