--- a/app/views/pages/_film_SeaGypsies.html.erb
+++ b/app/views/pages/_film_SeaGypsies.html.erb
@@ -2,4 +2,4 @@
 BAMFF / VIMFF<br>
 role: rerecording mix<br><br>
 
-<iframe src="https://www.youtube.com/embed/k3rJiDN7cao" frameborder="0" allowfullscreen></iframe>
+<iframe src="//www.youtube.com/embed/k3rJiDN7cao" frameborder="0" allowfullscreen></iframe>
