--- a/app/views/pages/_film_WinningGirl.html.erb
+++ b/app/views/pages/_film_WinningGirl.html.erb
@@ -2,4 +2,4 @@
 san diego asian film festival<br>
 role: sound design<br><br>
 
-<iframe src="https://www.youtube.com/embed/NSD6jxTJnPU" frameborder="0" allowfullscreen></iframe>
+<iframe src="//www.youtube.com/embed/NSD6jxTJnPU" frameborder="0" allowfullscreen></iframe>
