--- a/app/views/pages/_post_cisco.html.erb
+++ b/app/views/pages/_post_cisco.html.erb
@@ -1,4 +1,4 @@
 cisco innovation engine<br>
 role: sound design<br><br>
 
-<iframe src="https://player.vimeo.com/video/187766669?title=0&byline=0&portrait=0"frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="//player.vimeo.com/video/187766669?title=0&byline=0&portrait=0"frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
