--- a/app/views/pages/_post_queensway.html.erb
+++ b/app/views/pages/_post_queensway.html.erb
@@ -1,4 +1,4 @@
 trust for public land - the queensway<br>
 role: sound design / sound edit<br><br>
 
-<iframe src="https://player.vimeo.com/video/125939345?title=0&byline=0&portrait=0"frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="//player.vimeo.com/video/125939345?title=0&byline=0&portrait=0"frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
