--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -318,7 +318,7 @@ iframe {
 }
 
 //mobile 
-@media only screen and (max-width: 750px) and (min-width: 551px) {
+@media handheld, screen and (max-width: 700px) and (min-width: 551px) {
 		.nav p {
 			font-size: 200%;
 		}
