Change film festival name

--- a/app/views/pages/_film_SeaGypsies.html.erb
+++ b/app/views/pages/_film_SeaGypsies.html.erb
@@ -1,5 +1,5 @@
 <span class='projTitle'>sea gypsies: the far side of the world</span><br>
-BAMFF / VIMFF<br>
+BAMFF film festival / VIMFF<br>
 role: rerecording mix<br><br>
 
 <iframe src="//www.youtube.com/embed/k3rJiDN7cao" frameborder="0" allowfullscreen></iframe>
