Add skills to resume

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -249,9 +249,9 @@ iframe {
 
 
 //resume
-.resumeImg {
-	width: 90%;
-	text-align: center;
+h5 .skillBreak {
+	margin-left: 2%;
+	margin-right: 2%;
 }
 
 .resume h2 {
