--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -4,31 +4,38 @@
 		[ <%= link_to 'download resume', 'resume.pdf', download: 'LisaDevon' %> ]
 	</div>
 
+	<H2>skills</H2>
+		<H5>
+			<span class='skill'>pro tools hd</span> <span class='skillBreak'>|</span> 
+			<span class='skill'>avid d-command</span> <span class='skillBreak'>|</span> 
+			<span class='skill'>ableton live</span> <span class='skillBreak'>|</span> 
+			<span class='skill'>logic pro</span>
+		</H5>
 	<H2>experience</H2> 
-		<H3>audio engineer</H3>
+		<H3>audio engineer — disher music & sound</H3>
 			<H4>june 2014 - present</H4> 
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL> 
-						<LI>create original sound design, mix and master elements for broadcast, 	internet, theatrical, and radio standards</LI> 
-						<LI>conduct voiceover, edit, and mix sessions for commercials, audiobooks, 	film, animations; edit dialogue, music, and effects</LI>
-						<LI>communicate with clients, book sessions, provide invoices, organize and 	maintain studio environment</LI>
+						<LI>create original sound design, mix and master elements for broadcast, internet, theatrical, and radio standards</LI> 
+						<LI>conduct voiceover, edit, and mix sessions for commercials, audiobooks, film, animations; edit dialogue, music, and effects</LI>
+						<LI>communicate with clients, book sessions, provide invoices, organize and maintain studio environment</LI>
 					</UL></TD>
 				</TR></TABLE> 
-		<H3>a/v technician at A VMS</H3> 
+		<H3>a/v technician — AVMS</H3> 
 			<H4>april 2014 - july 2014</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>set up and run audio-visual equipment for meetings, conferences, and events</LI>
 					</UL></TD>
 				</TR></TABLE> 
-		<H3>stagehand at I.A.T.S.E. local 16</H3> 
+		<H3>stagehand — I.A.T.S.E. local 16</H3> 
 			<H4>august 2013 - july 2014</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>set up and operate audio-visual equipment for conferences and conventions</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3>audio engineer at outpost studios, inc.</H3> 
+		<H3>audio engineer — outpost studios, inc.</H3> 
 			<H4>july 2013 - june 2014</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
@@ -36,28 +43,28 @@
 						<LI>maintain studio environment, assist with foley, organize equipment, microphone set-up/placement, and place markers and sound effects in pro tools</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3>intern</H3> 
+		<H3>intern — audible shift</H3> 
 			<H4>march 2013 - december 2013</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>record voice-over and edit dialogue for film and audio-visual installations</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3>audio peer mentor</H3> 
+		<H3>audio peer mentor — AICA-SF</H3> 
 			<H4>august 2012 - september 2013</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>assist new and continuing students with on-campus concerns, organize and throw events, maintain student affairs office space</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3>intern at women's audio mission</H3> 
+		<H3>intern — women's audio mission</H3> 
 			<H4>september 2012 - december 2012</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>maintain studio environment, assist engineers with sessions, organize events, prepare/build gear for classes and demonstrations</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3>sound designer at crosswater media</H3> 
+		<H3>sound designer — crosswater media</H3> 
 			<H4>august 2011 - march 2012</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
@@ -65,9 +72,9 @@
 					</UL></TD>
 				</TR></TABLE>
 	<H2>education</H2> 
-		<H3>the art institute of california-san francisco</H3>
-			<H5>bachelor of science (BS), audio production, 2011-2013</H5>
-		<H3>west valley college</H3>
-			<H5>associate's degree, liberal arts, 2008-2012</H5>
+		<H3>the art institute of california-san francisco -- bachelors of science (BS)</H3>
+			<H4>june 2011 - august 2013</H4>
+		<H3>west valley college -- associate</H3>
+			<H4>june 2008 - june 2012</H4>
 
 </div>
