--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -29,7 +29,7 @@
 					</UL></TD>
 				</TR></TABLE> 
 		<H3>stagehand — I.A.T.S.E. local 16</H3> 
-			<H4>august 2013 - july 2014</H4>
+			<H4>september 2013 - july 2014</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>set up and operate audio-visual equipment for conferences and conventions</LI>
@@ -64,7 +64,7 @@
 						<LI>maintain studio environment, assist engineers with sessions, organize events, prepare/build gear for classes and demonstrations</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3>sound designer — crosswater media</H3> 
+		<H3>sound designer / composer — crosswater media</H3> 
 			<H4>august 2011 - march 2012</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
@@ -72,9 +72,9 @@
 					</UL></TD>
 				</TR></TABLE>
 	<H2>education</H2> 
-		<H3>the art institute of california-san francisco -- bachelors of science (BS)</H3>
+		<H3>the art institute of california-san francisco  —  bachelors of science (BS)</H3>
 			<H4>june 2011 - august 2013</H4>
-		<H3>west valley college -- associate</H3>
+		<H3>west valley college  —  associate</H3>
 			<H4>june 2008 - june 2012</H4>
 
 </div>
