--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+   	<!-- fonts -->
+   	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;lang=en" />
+   	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:300,400,600,700&amp;lang=en" />
+   	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&amp;lang=en" />
+   	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Dorsa:300,400,600,700&amp;lang=en" />
     
   </head>
 
