--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,13 @@
 
   	<div class='titleBanner'>
 		<div class='titleName'>lisa devon</div>
-		<div class='titleDescription'>sound design / mix / foley / edit / compose</div>
+		<div class='titleDescription'>
+			sound design <span class='titleSpacer'>/</span> 
+			mix <span class='titleSpacer'>/</span> 
+			foley <span class='titleSpacer'>/</span> 
+			edit <span class='titleSpacer'>/</span> 
+			compose
+		</div>
 	</div>
 
   	<div class='left nav'>
