--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class='pageDiv about'>
 
-	<p class='construction'>page currently under construction - stay tuned!</p>
+	<!-- <p class='construction'>page currently under construction - stay tuned!</p> -->
 
 	<p class='aboutTxt'>lisa devon is a san francisco based sound designer and engineer.<br>
 	she specializes in sound for film, branded spots, & other visual media.<br>
