Add text styling for all project pages

--- a/app/views/pages/_film_AmericanParadise.html.erb
+++ b/app/views/pages/_film_AmericanParadise.html.erb
@@ -1,5 +1,5 @@
 <span class='projTitle'>american paradise</span><br>
-sundace film festival / SXSW<br>
-role: rerecording mix<br><br>
+<span class='festivals'>sundace film festival / SXSW</span><br>
+<span class='projRole'>role: rerecording mix</span><br><br>
 
 <iframe src="//player.vimeo.com/video/199619694" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
