--- a/app/views/pages/_film_GutHack.html.erb
+++ b/app/views/pages/_film_GutHack.html.erb
@@ -1,5 +1,5 @@
 <span class='projTitle'>gut hack</span><br>
-SXSW official selection<br>
-role: sound design<br><br>
+<span class='festivals'>SXSW official selection</span><br>
+<span class='projRole'>role: sound design</span><br><br>
 
 <%= image_tag('/images/guthackposter.jpg', :class => 'projImg') %>
