--- a/app/views/pages/_film_WinningGirl.html.erb
+++ b/app/views/pages/_film_WinningGirl.html.erb
@@ -1,5 +1,5 @@
 <span class='projTitle'>winning girl</span><br>
-san diego asian film festival<br>
-role: sound design<br><br>
+<span class='festivals'>san diego asian film festival</span><br>
+<span class='projRole'>role: sound design</span><br><br>
 
 <iframe src="//www.youtube.com/embed/NSD6jxTJnPU" frameborder="0" allowfullscreen></iframe>
