--- a/app/views/pages/_post_cisco.html.erb
+++ b/app/views/pages/_post_cisco.html.erb
@@ -1,4 +1,4 @@
-cisco innovation engine<br>
-role: sound design<br><br>
+<span class='projTitle'>cisco innovation engine</span><br>
+<span class='projRole'>role: sound design</span><br><br>
 
 <iframe src="//player.vimeo.com/video/187766669?title=0&byline=0&portrait=0"frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
