--- a/app/views/pages/_post_vero.html.erb
+++ b/app/views/pages/_post_vero.html.erb
@@ -1,4 +1,5 @@
-vero_xsm - 3D mapping contest for kyiv lights festival<br>
-role: additional sound design<br><br>
+<span class='projTitle'>vero_xsm</span><br>
+<span class='festivals'>3D mapping contest for kyiv lights festival</span><br>
+<span class='projRole'>role: additional sound design</span><br><br>
 
 <iframe src="//www.youtube.com/embed/SW36PJznf0U?list=PL7Bw6NAaxdjmv2ZsRbLzumhOlZ-ronWke" frameborder="0" allowfullscreen></iframe>
