--- a/app/views/pages/connect.html.erb
+++ b/app/views/pages/connect.html.erb
@@ -1,8 +1,8 @@
 <div class='pageDiv connect'>
 
-	<p>e-mail me:
+	<p class='emailInfo'>e-mail me:
 	<%= mail_to "lisa@lisasound.com" do %>
-  		lisa@lisasound.com
+  		<span class='email'>lisa@lisasound.com</span>
 	<% end %></p>
 
 
