--- a/app/views/pages/film.html.erb
+++ b/app/views/pages/film.html.erb
@@ -4,32 +4,32 @@
 	<div id='portfolio'> 
 		<div class='project filmAmericanParadise'>
 			<div class='filmProject'>
-				<span data-modal='film1Modal' class='projBtn'>American Paradise</span>
+				<span data-modal='film1Modal' class='projBtn'>american paradise</span>
 			</div>
 		</div>
 		<div class='project filmSeaGypsies'>
 			<div class='filmProject'>
-				<span data-modal='film2Modal' class='projBtn'>Sea Gypsies</span>
+				<span data-modal='film2Modal' class='projBtn'>sea gypsies</span>
 			</div>		
 		</div>
 		<div class='project filmFindingKukan'>
 			<div class='filmProject'>
-				<span data-modal='film3Modal' class='projBtn'>Finding Kukan</span>
+				<span data-modal='film3Modal' class='projBtn'>finding kukan</span>
 			</div>
 		</div>
 		<div class='project filmVoicesBeyondTheWall'>
 			<div class='filmProject'>
-				<span data-modal='film4Modal' class='projBtn'>Voices Beyond the Wall</span>
+				<span data-modal='film4Modal' class='projBtn'>voices beyond the wall</span>
 			</div>
 		</div>
 		<div class='project filmWinningGirl'>
 			<div class='filmProject'>
-				<span data-modal='film5Modal' class='projBtn'>Winning Girl</span>
+				<span data-modal='film5Modal' class='projBtn'>winning girl</span>
 			</div>
 		</div>
 		<div class='project filmGutHack'>
 			<div class='filmProject'>
-				<span data-modal='film6Modal' class='projBtn'>Gut Hack</span>
+				<span data-modal='film6Modal' class='projBtn'>gut hack</span>
 			</div>
 		</div>
 	</div>	
