--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -48,7 +48,8 @@ iframe {
 	margin-bottom: 4%;
 }
 	.titleBanner .titleName {
-		font-size: 3.5rem;
+		// font-size: 3.5rem;
+		font-size: calc(10px + 6vw);
 		font-family: $font-stack2;
 		font-weight: 400;
 	}
@@ -105,6 +106,20 @@ iframe {
 		margin: auto;
 		margin-top: 3vh;
 	}
+	.connect .emailInfo {
+		font-size: 1.2rem;
+		font-family: $font-stack5;
+		font-weight: 200;
+	}
+	.connect .email {
+		color: $color-blue;
+		font-weight: 500;
+		letter-spacing: .2rem;
+		padding-left: 2%;
+	}
+	.connect .email:hover {
+		font-style: italic;
+	}
 	.icon {
 		width: 6%;
 		min-width: 50px;
@@ -114,120 +129,95 @@ iframe {
 
 
 //film projects
-		.filmAmericanParadise {
-			background-image: url('/projectImgs/americanparadise.jpg');
-		}
-
-		.filmSeaGypsies {
-			background-image: url('/projectImgs/seagypsies.jpg');
-		}
-
-		.filmFindingKukan {
-			background-image: url('/projectImgs/findingkukan.jpg');		
-		}
-
-		.filmVoicesBeyondTheWall {
-			background-image: url('/projectImgs/voicesbeyondthewalls.jpg');
-		}
-
-		.filmWinningGirl {
-			background-image: url('/projectImgs/winninggirl.jpg');			
-		}
-
-		.filmGutHack {
-			background-image: url('/projectImgs/guthack.jpg');
-		}
-
+	.filmAmericanParadise {
+		background-image: url('/projectImgs/americanparadise.jpg');
+	}
+	.filmSeaGypsies {
+		background-image: url('/projectImgs/seagypsies.jpg');
+	}
+	.filmFindingKukan {
+		background-image: url('/projectImgs/findingkukan.jpg');		
+	}
+	.filmVoicesBeyondTheWall {
+		background-image: url('/projectImgs/voicesbeyondthewalls.jpg');
+	}
+	.filmWinningGirl {
+		background-image: url('/projectImgs/winninggirl.jpg');			
+	}
+	.filmGutHack {
+		background-image: url('/projectImgs/guthack.jpg');
+	}
 //music projects
-
-		.musicMagicianBag {
-			background-image: url('/projectImgs/magicianbag.jpg')
-		}
-
-		.musicSelidim {
-			background-image: url('/projectImgs/selidim.jpg')
-		}
-
-		.musicAllegretto {
-			background-image: url('/projectImgs/allegretto.jpg')
-		}
-
+	.musicMagicianBag {
+		background-image: url('/projectImgs/magicianbag.jpg')
+	}
+	.musicSelidim {
+		background-image: url('/projectImgs/selidim.jpg')
+	}
+	.musicAllegretto {
+		background-image: url('/projectImgs/allegretto.jpg')
+	}
 //post projects
-
-		.postVero {
-			background-image: url('/projectImgs/vero.jpg')
-		}
-
-		.postCisco {
-			background-image: url('/projectImgs/cisco.jpg')
-		}
-
-		.postQueensway {
-			background-image: url('/projectImgs/queensway.jpg')
-		}
+	.postVero {
+		background-image: url('/projectImgs/vero.jpg')
+	}
+	.postCisco {
+		background-image: url('/projectImgs/cisco.jpg')
+	}
+	.postQueensway {
+		background-image: url('/projectImgs/queensway.jpg')
+	}
 
 
 //post, film, music 
-		.project {
-			background-size: cover;
-    		background-repeat:   no-repeat;
-    		background-position: center center;
-			width: 45%;
-			height: 100%;
-			margin: .1%;
-			margin-bottom: .3%;
-			display: inline-block;
-			opacity: 0.65;
-			background-color: black;
-			border: 3px white solid;
-		}
-
-		.project:hover {
-			opacity: 100;
-		}
-
-		.postProject, .musicProject, .filmProject {
-			position: relative;
-			margin-top: 20%;
-			font-size: 2.5vw;
-			color: black;
-		}
-		
-		.postProject a, .musicProject a, .filmProject a, .projBtn{
-			color: white;
-			text-decoration: none;
-			opacity: 0.75;
-		}
-		
-		.postProject a:hover, .musicProject a:hover, .filmProject a:hover, .projBtn:hover {
-			opacity: 100;
-			text-shadow: 1px 1px black;
-		  	cursor: pointer;
-		}
-
-		.projTitle {
-			font-size: 1.5rem;
-		}
-
-		.projImg {
-			text-align: center;
-			width: 70%;
-		}
-		
-		// modals
+	.project {
+		background-size: cover;
+   	background-repeat:   no-repeat;
+   	background-position: center center;
+		width: 45%;
+		height: 100%;
+		margin: .1%;
+		margin-bottom: .3%;
+		display: inline-block;
+		opacity: 0.65;
+		background-color: black;
+		border: 3px white solid;
+	}
+	.project:hover {
+		opacity: 100;
+	}
+	.postProject, .musicProject, .filmProject {
+		position: relative;
+		margin-top: 20%;
+		font-size: 2.5vw;
+		color: black;
+	}
+	.postProject a, .musicProject a, .filmProject a, .projBtn{
+		color: white;
+		text-decoration: none;
+		font-family: $font-stack2;
+		letter-spacing: 0.01rem;
+		opacity: 0.75;
+	}
+	.postProject a:hover, .musicProject a:hover, .filmProject a:hover, .projBtn:hover {
+		opacity: 100;
+		text-shadow: 1px 1px black;
+	  cursor: pointer;
+	}
+	// modals
 		.projModal {
 			display: none;
-		    position: fixed; 
-		    z-index: 1;
-		    left: 0;
-		    top: 0;
-		    width: 100%;
-		    height: 100%; 
-		    overflow: auto;
-		    background-color: rgb(0,0,0); /* Fallback color */
-		    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
-		    color: black;
-		    text-align: center;
+		  position: fixed; 
+		  z-index: 1;
+		  left: 0;
+		  top: 0;
+		  width: 100%;
+		  height: 100%; 
+		  overflow: auto;
+		  background-color: rgb(0,0,0); /* Fallback color */
+		  background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+		  color: black;
+		  text-align: center;
 		}
 		.projModalContent {
 		    background-color: #d7efea;
@@ -248,13 +238,31 @@ iframe {
 		    text-decoration: none;
 		    cursor: pointer;
 		}
-
-
-
-// individual project pages
-.projectShow {
-	width: 100%;
-}
+		// individual project pages [modals]
+			.projectShow {
+				width: 100%;
+			}
+			.projTitle {
+				font-size: 2rem;
+				font-family: $font-stack6;
+				letter-spacing: 0.2rem;
+			}
+			.festivals {
+				font-family: $font-stack2;
+				font-size: 1rem;
+				font-style: italic;
+				font-weight: 300;
+			}
+			.projRole {
+				font-family: $font-stack1;
+				font-size: 1.1rem;
+				font-weight: 500;
+				letter-spacing: 0.1rem;
+			}
+			.projImg {
+				text-align: center;
+				width: 70%;
+			}	
 
 
 //resume
@@ -327,6 +335,7 @@ h5 .skillBreak {
 			float: none;
 			width: 100%;
 			margin: auto;
+			margin-left: -0.6%;
 		}
 
 		.project {
