--- a/app/views/pages/_film_FindingKukan.html.erb
+++ b/app/views/pages/_film_FindingKukan.html.erb
@@ -1,5 +1,5 @@
 <span class='projTitle'>finding kukan</span><br>
-CAAM film festival<br>
-role: sound design<br><br>
+<span class='festivals'>CAAM film festival</span><br>
+<span class='projRole'>role: sound design</span><br><br>
 
 <iframe src="//player.vimeo.com/video/188201391?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
