--- a/app/views/pages/_film_SeaGypsies.html.erb
+++ b/app/views/pages/_film_SeaGypsies.html.erb
@@ -1,5 +1,5 @@
 <span class='projTitle'>sea gypsies: the far side of the world</span><br>
-bamff film festival / VIMFF<br>
-role: rerecording mix<br><br>
+<span class='festivals'>bamff film festival / VIMFF</span><br>
+<span class='projRole'>role: rerecording mix</span><br><br>
 
 <iframe src="//www.youtube.com/embed/k3rJiDN7cao" frameborder="0" allowfullscreen></iframe>
