--- a/app/views/pages/_film_VoicesBeyondTheWall.html.erb
+++ b/app/views/pages/_film_VoicesBeyondTheWall.html.erb
@@ -1,5 +1,5 @@
 <span class='projTitle'>voices beyond the wall</span><br>
-miami film festival<br>
-role: sound design<br><br>
+<span class='festivals'>miami film festival</span><br>
+<span class='projRole'>role: sound design</span><br><br>
 
 <iframe src="//player.vimeo.com/video/199515953" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
