--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -266,47 +266,68 @@ iframe {
 
 
 //resume
-h5 .skillBreak {
-	margin-left: 2%;
-	margin-right: 2%;
-}
-
-.resume h2 {
-	font-size: 1.8rem;
-}
-
-.resume h3 {
-	font-size: 1.3rem;
-	margin-left: 2%;
-}
-
-.resume h4 {
-	font-size: 1.05rem;
-	font-style: italic;
-	font-weight: normal;
-	margin-left: 4%;
-	margin-top: -12px;
-}
-
-.resume h5 {
-	font-size: 1.1rem;
-	font-weight: normal;
-	margin-left: 4%;
-	margin-top: -14px;
-}
-
-.resume ul {
-	margin-top: -18px;
-	margin-bottom: -3px;
-}
-
-.resume li {
-	margin-left: 2%;
-}
-
-.resumeDownload {
-	font-size: 1.2rem;
-}
+	h5 .skill {
+		font-family: $font-stack6;
+		font-weight: 300;
+		font-size: 1.2rem;
+	}
+	h5 .skillBreak {
+		margin-left: 2%;
+		margin-right: 2%;
+		font-weight: 100;
+	}
+	.resume h2 {
+		font-size: 1.8rem;
+		font-family: $font-stack1;
+		font-weight: 600;
+	}
+	.resume h3 {
+		font-size: 1.28rem;
+		margin-left: 3%;
+		font-family: $font-stack2;
+		font-weight: 500;
+	}
+	.resume .jobRole, .resume .degree {
+		letter-spacing: 0.3rem;
+	}
+	.resume h4 {
+		font-size: 1rem;
+		font-family: $font-stack1;
+		font-style: italic;
+		font-weight: 200;
+		margin-left: 3%;
+		margin-top: -17px;
+	}
+	.resume h5 {
+		font-size: 1.1rem;
+		font-weight: 400;
+		margin-left: 5%;
+		margin-top: -14px;
+	}
+	.resume ul {
+		margin-top: -18px;
+		margin-bottom: -3px;
+	}
+	.resume li {
+		margin-left: 3%;
+		font-family: $font-stack5;
+		font-weight: 300;
+		font-size: 0.9rem;
+		letter-spacing: 0.1rem;
+	}
+	.resumeDownload {
+		margin-left: 30%;
+		font-size: 1.2rem;
+		font-family: $font-stack2;
+	}
+	.resumeDownloadLink {
+		color: $color-blue;
+		letter-spacing: 0.1rem;
+		font-weight: 200;
+	}
+	.resumeDownloadLink:hover {
+		font-weight: 600;
+	}
 
 
 
