change title banner name to image

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -54,6 +54,11 @@ iframe {
 		font-family: $font-stack2;
 		font-weight: 400;
 	}
+	.titleBannerImg {
+		text-align: center;
+		width: 50%;
+		margin: -2%;
+	}
 	.titleBanner .titleDescription {
 		font-size: 1.2rem;
 		font-family: $font-stack6;
