--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
   <body>
 
   	<div class='titleBanner'>
-		<div class='titleName'>lisa devon</div>
+		<div class='titleName'>
+			<%= image_tag('/images/bannerName.png', :class => 'titleBannerImg') %>
+		</div>
 		<div class='titleDescription'>
 			sound design <span class='titleSpacer'>/</span> 
 			mix <span class='titleSpacer'>/</span> 
