fix resume typos

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -72,7 +72,7 @@
 					</UL></TD>
 				</TR></TABLE>
 	<H2>education</H2> 
-		<H3>the art institute of california-san francisco  —  <span class='jobRole'>bachelors of science (BS)</span></H3>
+		<H3>the art institute of california-san francisco  —  <span class='jobRole'>bachelor of science</span></H3>
 			<H4>june 2011 - august 2013</H4>
 		<H3>west valley college  —  <span class='jobRole'>associate</span></H3>
 			<H4>june 2008 - june 2012</H4>
