--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 	</div>
 
   	<div class='left nav'>
-		<p><%= link_to "about", about_path %></p>
+		<p><%= link_to "home", about_path %></p>
 		<p><%= link_to "post", post_path %></p>
 		<p><%= link_to "film", film_path %></p>
 		<p><%= link_to "music", music_path %></p>
