Change title order in resume

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -12,7 +12,7 @@
 			<span class='skill'>logic pro</span>
 		</H5>
 	<H2>experience</H2> 
-		<H3><span class='jobRole'>audio engineer</span> — disher music & sound</H3>
+		<H3>disher music & sound — <span class='jobRole'>audio engineer</span></H3>
 			<H4>june 2014 - present</H4> 
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL> 
@@ -21,21 +21,21 @@
 						<LI>communicate with clients, book sessions, provide invoices, organize and maintain studio environment</LI>
 					</UL></TD>
 				</TR></TABLE> 
-		<H3><span class='jobRole'>a/v technician</span> — AVMS</H3> 
+		<H3>AVMS — <span class='jobRole'>a/v technician</span></H3> 
 			<H4>april 2014 - july 2014</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>set up and run audio-visual equipment for meetings, conferences, and events</LI>
 					</UL></TD>
 				</TR></TABLE> 
-		<H3><span class='jobRole'>stagehand</span> — I.A.T.S.E. local 16</H3> 
+		<H3>I.A.T.S.E. local 16 — <span class='jobRole'>stagehand</span></H3> 
 			<H4>september 2013 - july 2014</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>set up and operate audio-visual equipment for conferences and conventions</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3><span class='jobRole'>audio engineer</span> — outpost studios, inc.</H3> 
+		<H3>outpost studios, inc. — <span class='jobRole'>audio engineer</span></H3> 
 			<H4>july 2013 - june 2014</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
@@ -43,28 +43,28 @@
 						<LI>maintain studio environment, assist with foley, organize equipment, microphone set-up/placement, and place markers and sound effects in pro tools</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3><span class='jobRole'>intern</span> — audible shift</H3> 
+		<H3>audible shift — <span class='jobRole'>intern</span></H3> 
 			<H4>march 2013 - december 2013</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>record voice-over and edit dialogue for film and audio-visual installations</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3><span class='jobRole'>audio peer mentor</span> — AICA-SF</H3> 
+		<H3>AICA-SF — <span class='jobRole'>audio peer mentor</span></H3> 
 			<H4>august 2012 - september 2013</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>assist new and continuing students with on-campus concerns, organize and throw events, maintain student affairs office space</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3><span class='jobRole'>intern</span> — women's audio mission</H3> 
+		<H3>women's audio mission — <span class='jobRole'>intern</span></H3> 
 			<H4>september 2012 - december 2012</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
 						<LI>maintain studio environment, assist engineers with sessions, organize events, prepare/build gear for classes and demonstrations</LI>
 					</UL></TD>
 				</TR></TABLE>
-		<H3><span class='jobRole'>sound designer / composer</span> — crosswater media</H3> 
+		<H3>crosswater media — <span class='jobRole'>sound designer / composer</span></H3> 
 			<H4>august 2011 - march 2012</H4>
 				<TABLE><TR><TD>&nbsp;</TD> 
 					<TD><UL>
@@ -72,9 +72,9 @@
 					</UL></TD>
 				</TR></TABLE>
 	<H2>education</H2> 
-		<H3>the art institute of california-san francisco  —  <span class='jobRole'>bachelor of science</span></H3>
+		<H3><span class='jobRole'>the art institute of california-san francisco</span>  —  bachelor of science</H3>
 			<H4>june 2011 - august 2013</H4>
-		<H3>west valley college  —  <span class='jobRole'>associate</span></H3>
+		<H3><span class='jobRole'>west valley college</span>  —  associate</H3>
 			<H4>june 2008 - june 2012</H4>
 
 </div>
