--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -56,7 +56,9 @@ iframe {
 	}
 	.titleBannerImg {
 		text-align: center;
-		width: 50%;
+		width: 40%;
+		padding-bottom: 2%;
+		padding-top: 2%;
 		margin: -2%;
 	}
 	.titleBanner .titleDescription {
@@ -98,7 +100,7 @@ iframe {
 //about
 	.about {
 		margin: auto;
-		margin-top: 3vh;
+		margin-top: -6%;
 	}
 	.aboutTxt {
 		font-size: 1.12rem;
@@ -106,6 +108,10 @@ iframe {
 		letter-spacing: .05rem;
 		text-align: center;
 		margin-left: -20%;
+	}
+	.aboutSynth {
+		width: 20%;
+		min-width: 150px;
 	}
 
 
@@ -421,7 +427,7 @@ iframe {
 			text-align: center;
 		}
 		.about {
-			margin-top: 6%;
+			margin-top: -4%;
 			text-align: left;
 		}
 		.aboutTxt {
