--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,9 @@
 
 	<!-- <p class='construction'>page currently under construction - stay tuned!</p> -->
 
-	<p class='aboutTxt'>lisa devon is a san francisco based sound designer and engineer.<br>
+	<p class='aboutTxt'>
+	<%= image_tag('/images/synth.gif', :class => 'aboutSynth') %><br>
+	lisa devon is a san francisco based sound designer and engineer.<br>
 	she specializes in sound for film, branded spots, & other visual media.<br>
 	she also composes music & has a huge affinity for synthesizers.</p>
 
