Change post to design in nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 
   	<div class='left nav'>
 		<p><%= link_to "home", about_path %></p>
-		<p><%= link_to "post", post_path %></p>
+		<p><%= link_to "design", post_path %></p>
 		<p><%= link_to "film", film_path %></p>
 		<p><%= link_to "music", music_path %></p>
 		<p><%= link_to "resume", resume_path %></p>
