add disclaimer to Disher recorded projs

--- a/app/views/pages/_film_SeaGypsies.html.erb
+++ b/app/views/pages/_film_SeaGypsies.html.erb
@@ -1,5 +1,8 @@
 <span class='projTitle'>sea gypsies: the far side of the world</span><br>
 <span class='festivals'>bamff film festival / VIMFF</span><br>
-<span class='projRole'>role: rerecording mix</span><br><br>
+<span class='projRole'>role: re-recording mix</span><br><br>
 
 <iframe src="//www.youtube.com/embed/k3rJiDN7cao" frameborder="0" allowfullscreen></iframe>
+
+<br><br>
+<span class='disclaimer'>mixed at <%= link_to 'Disher Music & Sound', "//www.dishermusic.com/#about", :target => "_blank" %></span>
