--- a/app/views/pages/_film_VoicesBeyondTheWall.html.erb
+++ b/app/views/pages/_film_VoicesBeyondTheWall.html.erb
@@ -3,3 +3,6 @@
 <span class='projRole'>role: sound design</span><br><br>
 
 <iframe src="//player.vimeo.com/video/199515953" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+<br><br>
+<span class='disclaimer'>mixed at <%= link_to 'Disher Music & Sound', "//www.dishermusic.com/#about", :target => "_blank" %></span>
