--- a/app/views/pages/_post_cisco.html.erb
+++ b/app/views/pages/_post_cisco.html.erb
@@ -2,3 +2,6 @@
 <span class='projRole'>role: sound design</span><br><br>
 
 <iframe src="//player.vimeo.com/video/187766669?title=0&byline=0&portrait=0"frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+<br><br>
+<span class='disclaimer'>mixed at <%= link_to 'Disher Music & Sound', "//www.dishermusic.com/#about", :target => "_blank" %></span>
