--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -286,6 +286,11 @@ iframe {
 				text-align: center;
 				width: 70%;
 			}	
+			.disclaimer {
+				font-family: $font-stack2;
+				font-style: italic;
+				font-size: 0.9rem;
+			}
 
 
 //resume
