--- a/app/views/pages/_film_AmericanParadise.html.erb
+++ b/app/views/pages/_film_AmericanParadise.html.erb
@@ -1,5 +1,8 @@
 <span class='projTitle'>american paradise</span><br>
 <span class='festivals'>sundace film festival / SXSW</span><br>
-<span class='projRole'>role: rerecording mix</span><br><br>
+<span class='projRole'>role: re-recording mix</span><br><br>
 
 <iframe src="//player.vimeo.com/video/199619694" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+<br><br>
+<span class='disclaimer'>mixed at <%= link_to 'Disher Music & Sound', "//www.dishermusic.com/#about", :target => "_blank" %></span>
