--- a/app/views/pages/_film_GutHack.html.erb
+++ b/app/views/pages/_film_GutHack.html.erb
@@ -3,3 +3,6 @@
 <span class='projRole'>role: sound design</span><br><br>
 
 <%= image_tag('/images/guthackposter.jpg', :class => 'projImg') %>
+
+<br><br>
+<span class='disclaimer'>mixed at <%= link_to 'Disher Music & Sound', "//www.dishermusic.com/#about", :target => "_blank" %></span>
