--- a/app/views/pages/_film_WinningGirl.html.erb
+++ b/app/views/pages/_film_WinningGirl.html.erb
@@ -3,3 +3,6 @@
 <span class='projRole'>role: sound design</span><br><br>
 
 <iframe src="//www.youtube.com/embed/NSD6jxTJnPU" frameborder="0" allowfullscreen></iframe>
+
+<br><br>
+<span class='disclaimer'>mixed at <%= link_to 'Disher Music & Sound', "//www.dishermusic.com/#about", :target => "_blank" %></span>
