Add bg to nav for mobile

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -405,17 +405,21 @@ iframe {
 @media handheld, screen and (max-width: 500px) {
 		.nav {
 			float: left;
-			width: 15%;
+			width: 20%;
+			padding: 4%;
 			text-align: left;
 			position: fixed;;
-			top: 32vh;
+			top: 30vh;
+		  	background-color: rgb(0,0,0); /* Fallback color */
+		  	background-color: rgba(0,0,0,0.03); /* Black w/ opacity */
 		}
 		.nav p {
 			font-size: 150%;
 		}
 		.pageDiv {
 			float: right;
-			width: 72%;
+			padding: 1%;
+			width: 70%;
 			margin: auto;
 			margin-right: -2%;
 		}
